[package]
name = "rust-demangle-capi"
version = "0.1.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
build = "build.rs"

[lib]
name = "rust_demangle"
crate-type = ["staticlib"]

[dependencies]
rustc-demangle = {git = "https://github.com/alexcrichton/rustc-demangle/", rev = "1523aeb635e57cf2223d2f7da4c19de8a07d4195"}

[build-dependencies]
rusty-cheddar = "0.3.0"
